2014-06-30  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/templates/monit.d/postgresql.conf.j2: correct
	process name

	* roles/databases/templates/postgresql.conf.j2
	(wal_sender_timeout): activate replication by default

2014-06-27  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/admin/tasks/storebackup.yml: correct mounted partition via UUID


	* roles/admin/templates/influxdb.toml.j2 (level): setlogleve to warn

2014-06-25  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/admin/vars/main.yml (carbon_host): upgrade es to 1.2

	* roles/7pi/templates/7pi-sso.conf.j2: do not put date in log filename

2014-06-22  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/admin/vars/main.yml (kibana_domain): small mistake

	* roles/webservers/tasks/nginx.yml: mv to nginx full and activate ngxsi

2014-06-21  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/7pi/templates/nginx/7pi.conf.j2: ocsp disable BUG BUG BUG
	certificate must be on chained

	* roles/7pi/templates/7pi-sso.conf.j2: idem

	* roles/7pi/templates/7pi-rssfeeds.conf.j2: put key in vars

	* roles/X11/tasks/synergy.yml: add ip for server

2014-06-14  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/common/tasks/collectd.yml: remove postgresql conf from
	common and move it to databases tasks

	* roles/X11/tasks/xrandr.yml: idem

	* roles/X11/tasks/synergy.yml: add config file

	* roles/common/templates/collectd/collection.conf.j2 (datadir):
	put everything in /var/lib/collectd and not in sub rrd

2014-06-13  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/templates/postgresql.conf.j2
	(checkpoint_segments): setup to 16
	(shared_buffers): run pgtunes and setup a few values higher
	lot of ram on servers, thus increase to let 64GB for pg
	4 SSD 0+1

2014-06-11  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/7pi/tasks/postgresql.yml: add grant

	* roles/7pi/tasks/common.yml: add httpretty

2014-06-08  Pierre Aubert  <pierre@imac-pierre.home>
