@@ -14,7 +14,7 @@
     - ufw
 
 - name: Collectd | Deploy monit config
-  template: src=monit.d/collectd.conf.j2  dest=/etc/monit/conf.d/collectd.conf
+  template: src=monit.d/collectd-server.conf.j2  dest=/etc/monit/conf.d/collectd-server.conf
   notify:
     - reload monit
   tags:
