@@ -1,0 +1,2 @@
+# {{ansible_managed}}
+# this conf is for the collector/server and not for the client
