@@ -50,7 +50,7 @@
 - name: Collectd | Deploy monit config
   template: src=monit.d/collectd.conf.j2  dest=/etc/monit/conf.d/collectd.conf
   notify:
-    - restart monit
+    - reload monit
   tags:
     - collectd
     - monit
