@@ -14,6 +14,7 @@
 - include: logwatch.yml tags=common
 - include: security.yml tags=common
 ### admin client
+- include: logrotate.yml tags=common
 - include: rsyslog.yml tags=common
 - include: collectd.yml tags=common
 - include: monit.yml tags=common
