@@ -1,8 +1,8 @@
 # {{ansible_managed}}
 # do not try to be tooo smart with pg, alert only
-check process postgres with pidfile /var/run/postgres/{{pg_version}}-{{pg_cluster}}.pid
+check process postgres with pidfile /var/run/postgresql/{{pg_version}}-{{pg_cluster}}.pid
     group database
-    start program = "/etc/init.d/postgresql start"
-    stop  program = "/etc/init.d/postgresql stop"
+    start program = "/etc/init.d/postgres start"
+    stop  program = "/etc/init.d/postgres stop"
  if failed unixsocket /var/run/postgresql/.s.PGSQL.{{pg_port}} protocol pgsql then alert
  if failed host localhost port {{pg_port}} protocol pgsql then alert
