@@ -1,3 +1,3 @@
-<Plugin "nut">
+<Plugin nut>
   UPS "eaton@localhost:{{ups_port}}"
 </Plugin>
