@@ -94,7 +94,7 @@ CERTFILE /etc/pki/tls/certs/nut.crt
 
 # =======================================================================
 # CERTREQUEST <certificate request level>
-# CERTREQUEST REQUIRE
+CERTREQUEST REQUIRE
 #
 # When compiled with SSL support with NSS backend and client certificate
 # validation (disabled by default, see 'docs/security.txt'),
