@@ -315,7 +315,7 @@ FINALDELAY 5
 # contain one CA certificate. The files are looked up by the CA subject
 # name hash value, which must hence be available.
 #
-# CERTPATH /usr/ssl/certs
+CERTPATH /etc/pki/tls/certs
 # 
 # See 'docs/security.txt' or the Security chapter of NUT user manual
 # for more information on the SSL support in NUT.
